# research-bots

./: pyproject.toml
bots/api/: datanode.py
bots/http/: traders_handler.py
bots/services/: scenario.py
bots/wallet/: cli.py
